# ministr

./: .dockerignore  .env.dev.example  .gitattributes  .gitignore  .iris.toml  .magistr-roadmap.yml  .ministr.toml  AGENTS.md  CHANGELOG.md  CI-RUNNER-SETUP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DESIGN.md  Dockerfile  INSTALL.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  ONBOARDING.md  PRESENTATION.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  STEWARDSHIP.md  bacon.toml  cliff.toml  deny.toml  docker-compose.dev.yml  fly.toml  install.ps1  install.sh  justfile  release-plz.toml  rust-toolchain.toml
iris-api/: Cargo.toml
iris-api/src/: activity.rs  client.rs  coherence.rs  corpus.rs  lib.rs  query.rs  session.rs  status.rs
iris-app/src-tauri/: Cargo.toml  tauri.conf.json
iris-cli/: Cargo.toml
iris-cli/src/: commands.rs  infra.rs  ingestion.rs  instance.rs  main.rs  proxy.rs
iris-cli/tests/: smoke.rs
iris-core/: Cargo.toml
iris-core/benches/: embedding.rs  ingestion.rs  prefetch.rs  search.rs  token_economics.rs
iris-core/src/: analytics.rs  bundle.rs  coherence.rs  config.rs  error.rs  ingestion.rs  init.rs  lib.rs  llms_txt.rs  mem_profile.rs  scaffold.rs  search.rs  service.rs  token.rs  tracing.rs  types.rs  web.rs  workspace.rs
iris-core/tests/: analytics_trace_bugs.rs  backend_equivalence.rs  bridge_fixtures.rs  budget_trace_bugs.rs  budget_tracking.rs  code_ingestion.rs  coherence_trace_bugs.rs  compression_trace_bugs.rs  embedding_cache.rs  eval_model_comparison.rs  eval_retrieval.rs  eviction_eval.rs  memory_trace_bugs.rs  multi_corpus_clone.rs  multi_lang_symbols.rs  prefetch_trace_bugs.rs  registry_trace_bugs.rs  storage_integration.rs  symbol_matrix.rs  token_baseline.rs  web_fetch_integration.rs  window_trace_bugs.rs
iris-daemon/: Cargo.toml
iris-daemon/src/: activity.rs  ask.rs  cloud.rs  convert.rs  daemon.rs  indexer.rs  inference.rs  lib.rs  persistence.rs  registry.rs  state.rs
iris-daemon/tests/: daemon_roundtrip.rs  daemon_stress.rs  prefetch_invalidation.rs  session_budget_e2e.rs  session_invalidation.rs
iris-mcp/: Cargo.toml
iris-mcp/src/: a2a.rs  auth.rs  bundle_routes.rs  elicitation.rs  error.rs  lib.rs  proxy.rs  sampling.rs  server.rs  task.rs
iris-mcp/tests/: e2e_mcp.rs
ministr-api/: Cargo.toml  README.md
ministr-api/src/: activity.rs  api_key.rs  audit.rs  blob_sink.rs  client.rs  cloud_router.rs  coherence.rs  corpora_repo.rs  corpus.rs  corpus_restorer.rs  drops_ledger.rs  exec.rs  github_app.rs  index_job_sink.rs  iso8601.rs  job_start_trigger.rs  lib.rs  mail.rs  plan_resolver.rs  query.rs  session.rs  session_bundle_store.rs  session_storage.rs  sla_window_store.rs  status.rs  tenant.rs  tenant_filter.rs  transport.rs  usage.rs
ministr-app/src-tauri/: Cargo.toml  Entitlements.plist  installer-hooks.nsh  tauri.conf.json
ministr-atlas/: Cargo.toml
ministr-atlas/src/: indexer.rs  lib.rs  license.rs  manifest.rs  optout.rs  repos.rs  routes.rs
ministr-cli/: Cargo.toml  README.md
ministr-cli/src/: cloud_check.rs  cloud_demo.rs  commands.rs  config_resolve.rs  infra.rs  ingestion.rs  instance.rs  lib.rs  main.rs  proxy.rs  worker.rs
ministr-cli/tests/: smoke.rs
ministr-cloud/: Cargo.toml
ministr-cloud-tools/: Cargo.toml
ministr-cloud-tools/src/: commands.rs  lib.rs  main.rs
ministr-cloud/migrations/: 0001_initial.sql  0002_usage_rollups.sql  0003_corpus_registry.sql  0004_org_invites.sql  0005_cloud_corpus_acl.sql  0006_api_keys_columns.sql  0007_webhook_subscriptions.sql  0008_agent_sessions.sql  0009_session_drops.sql  0010_org_saml_configs.sql  0011_org_oidc_configs.sql  0012_org_oidc_group_role_map.sql  0013_audit_events_partitioned.sql  0014_org_siem_configs.sql  0015_audit_events_revoke_runtime_role.sql  0016_request_latency_snapshots.sql  0017_license_issuances.sql  0018_bounced_emails.sql
ministr-cloud/src/: api_keys.rs  audit.rs  blob.rs  blob_backend.rs  blob_fs.rs  blob_sink.rs  cli.rs  corpora_repo.rs  corpus_restorer.rs  db.rs  drops_ledger.rs  embedding.rs  index_job_sink.rs  job_start.rs  lib.rs  license.rs  license_issuance.rs  mail.rs  oidc.rs  revocation_fetch.rs  saml.rs  session_bundle_store.rs  session_storage.rs  siem.rs  sla.rs  tenant_filter.rs  users.rs  webhooks.rs
ministr-core/: Cargo.toml  README.md
ministr-core/benches/: embedding.rs  ingestion.rs  prefetch.rs  search.rs  token_economics.rs
ministr-core/src/: analytics.rs  bundle.rs  coherence.rs  config.rs  corpus_id.rs  error.rs  freshness.rs  fs_util.rs  init.rs  lib.rs  llms_txt.rs  mem_profile.rs  scaffold.rs  search.rs  token.rs  tracing.rs  types.rs  workspace.rs
ministr-core/tests/: analytics_trace_bugs.rs  backend_equivalence.rs  bridge_fixtures.rs  budget_trace_bugs.rs  budget_tracking.rs  code_coalesce.rs  code_ingestion.rs  coherence_trace_bugs.rs  compression_trace_bugs.rs  diff_impact.rs  embedder_repro.rs  embedding_cache.rs  eval_lsp_nav.rs  eval_model_comparison.rs  eval_retrieval.rs  eviction_eval.rs  fe2_extraction.rs  fe3_refs.rs  fe3b_import_edges.rs  fe5_invariants.rs  fe6_coverage_guard.rs  fe_c_extraction.rs  fe_cpp.rs  fe_cpp_extraction.rs  fe_csharp_edges.rs  fe_go_edges.rs  fe_java_edges.rs  fe_kotlin_edges.rs  fe_php_edges.rs  fe_python_edges.rs  fe_ruby_edges.rs  fe_scala_edges.rs  fe_swift_edges.rs  fe_ts_edges.rs  fe_ts_extraction.rs  fe_ts_refs.rs  hnsw_zero_guard.rs  hybrid_search.rs  ingestion_consistency.rs  memory_trace_bugs.rs  (+13 more)
ministr-daemon/: Cargo.toml  README.md
ministr-daemon/src/: activity.rs  ask.rs  bootstrap.rs  cloud.rs  convert.rs  coordinator.rs  daemon.rs  embedder_pool.rs  exec.rs  freshness_cache.rs  indexer.rs  inference.rs  lib.rs  persistence.rs  registry.rs  scheduler.rs  state.rs  transport.rs
ministr-daemon/tests/: daemon_roundtrip.rs  daemon_stress.rs  embed_cache_wiring.rs  exec_engine.rs  file_reads.rs  lazy_load.rs  list_files.rs  prefetch_invalidation.rs  reindex_purge.rs  session_budget_e2e.rs  session_invalidation.rs  session_usage_e2e.rs  throughput_bench.rs
ministr-mcp/: Cargo.toml  README.md
(+1453 files in other folders)
