[workspace]
members = ["iris-api", "iris-core", "iris-daemon", "iris-mcp", "iris-cli", "iris-app/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alrik/iris-rs"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
toml = "0.8"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"

# Markdown parsing
comrak = "0.36"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
url = "2"

# HTML parsing
scraper = "0.26"

# PDF text extraction
pdf-extract = "0.10"

# Token counting
tiktoken-rs = "0.6"

# Embeddings
fastembed = "5"
# Must match fastembed's pinned ort version for CoreML support.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["coreml"] }

# Vector index
hnsw_rs = "0.3"

# XML parsing
quick-xml = "0.37"

# Hashing
sha2 = "0.10"

# File watching
notify = "7"

# Glob pattern matching
glob = "0.3"

# File walking with .gitignore support
ignore = "0.4"

# Efficient sync primitives (no poisoning, smaller, faster)
parking_lot = "0.12"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"

# Archive / compression
tar = "0.4"
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP
rmcp = { version = "1.2", features = ["server", "transport-io", "transport-streamable-http-server", "elicitation", "schemars"] }
axum = "0.8"

# Testing
tempfile = "3"

# iris workspace crates
iris-api = { path = "iris-api" }
iris-core = { path = "iris-core" }
iris-daemon = { path = "iris-daemon" }
iris-mcp = { path = "iris-mcp" }
