[workspace]
members = ["ministr-api", "ministr-core", "ministr-daemon", "ministr-mcp", "ministr-cli", "ministr-app/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OlsonSoftware/ministr"
homepage = "https://ministr.ai"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
toml = "0.8"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"

# Markdown parsing
comrak = "0.36"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
url = "2"

# HTML parsing
scraper = "0.26"

# PDF text extraction
pdf-extract = "0.10"

# Token counting
tiktoken-rs = "0.6"

# Embeddings
fastembed = "5"
# Must match fastembed's pinned ort version for CoreML support.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["coreml"] }

# Candle — native Rust ML framework with Metal GPU acceleration
candle-core = { version = "0.10", features = ["metal", "accelerate"] }
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.22"

# Vector index
hnsw_rs = "0.3"

# XML parsing
quick-xml = "0.37"

# Hashing
sha2 = "0.10"
# Used for content-change-detection hashes on the indexer hot path.
# ~3× faster than SHA-256 per single-thread, with the same hex output
# format (32-byte digest → 64 hex chars). Identity-style hashes
# (corpus root ID, git repo cache key, bundle path) deliberately stay
# on SHA-256 because their values are persisted across upgrades.
blake3 = "1.5"

# File watching
notify = "7"

# Glob pattern matching
glob = "0.3"

# File walking with .gitignore support
ignore = "0.4"

# Efficient sync primitives (no poisoning, smaller, faster)
parking_lot = "0.12"

# Logos — fast tokenizer used for languages without a tree-sitter
# grammar (HLSL/GLSL shaders today; planned C++ fallback when
# tree-sitter times out). Keep on workspace so each crate can opt in.
logos = "0.15"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
# Drop-in replacement for tree-sitter-cpp: a strict superset that
# additionally recognizes Unreal Engine reflection macros (UCLASS,
# UFUNCTION, GENERATED_BODY, etc.) as first-class syntax nodes.
# Vanilla C++ parses identically. Pinned to a specific commit because
# the upstream isn't on crates.io yet.
tree-sitter-unreal-cpp = { git = "https://github.com/taku25/tree-sitter-unreal-cpp", rev = "92eee7d1ac994e408c208bcb1b73170c8746356f" }
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
# Coverage expansion — already-routed languages that previously fell back
# to text-only chunking. All compile against tree-sitter 0.26 via the
# tree-sitter-language 0.1 ABI shim. Versions are resolver-validated;
# pin a git rev (unreal-cpp pattern) for any grammar that lags crates.io.
tree-sitter-bash = "0.25"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-lua = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-dart = "0.0"
tree-sitter-r = "1"
tree-sitter-hcl = "1"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-sequel = "0.3"
tree-sitter-zig = "1"
tree-sitter-proto = "0.2"
# Composite / single-file-component grammars (host grammar parses the
# multi-language SFC structure; embedded JS/CSS is a follow-up via
# injection). `-ng` = modern tree-sitter-language bindings.
tree-sitter-svelte-ng = "1"
# Maximal coverage expansion — markup, config, JVM-adjacent, functional,
# and niche stacks. All resolver-validated against tree-sitter 0.26 via
# the tree-sitter-language 0.1 ABI shim; any crate that fails to link
# (legacy `links = "tree-sitter"` against an old core) gets dropped to
# the documented text fallback below rather than pinned, to keep the
# build green on a single `cargo build --workspace`.
tree-sitter-css = "0.25"
tree-sitter-graphql = "0.1"
tree-sitter-groovy = "0.1"
tree-sitter-nix = "0.3"
tree-sitter-erlang = "0.17"
tree-sitter-powershell = "0.26"
tree-sitter-solidity = "1"
tree-sitter-objc = "3"
tree-sitter-julia = "0.23"
tree-sitter-cmake = "0.7"
tree-sitter-make = "1"
# (tree-sitter-vue 0.0.3 and tree-sitter-astro have no ABI-current
#  release — vue pins legacy tree-sitter 0.20, astro is unpublished.
#  .vue/.astro keep the text fallback. Svelte uses the modern `-ng`
#  bindings, like tree-sitter-kotlin-ng.)
# Dockerfile: NO ABI-current grammar exists. Both crates.io 0.2.0 and
# the upstream main branch declare `links = "tree-sitter"` against
# tree-sitter ^0.24, which hard-conflicts with our 0.26 (`links`
# allows only one copy). Dockerfiles keep routing to the text
# fallback (no regression). Revisit when an upstream rev adopts the
# tree-sitter-language 0.1 ABI shim.
# Markdown/HTML: deliberately NOT added as code grammars. ministr
# routes .md/.html to dedicated prose/markup parsers (ParserKind::
# Markdown / ::Html) which outperform a code AST for those formats.
# Clojure: same situation as Dockerfile. tree-sitter-clojure 0.1.0
# (latest on crates.io) depends on `tree-sitter ^0.25.6` as a *normal*
# dep with `links = "tree-sitter"`, conflicting with our 0.26. The 13
# other coverage grammars use `tree-sitter-language ^0.1` (tree-sitter
# only as a dev-dep), so they link cleanly. .clj/.cljs/.cljc/.edn keep
# the text fallback. Revisit when crates.io clojure adopts the shim.

# Archive / compression
tar = "0.4"
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Cross-shell PATH management for `ministr setup` and the Tauri first-run flow
onpath = "0.2"

# MCP
rmcp = { version = "1.2", features = ["server", "transport-io", "transport-streamable-http-server", "elicitation", "schemars"] }
axum = "0.8"

# Testing
tempfile = "3"

# ministr workspace crates
ministr-api = { path = "ministr-api" }
ministr-core = { path = "ministr-core" }
ministr-daemon = { path = "ministr-daemon" }
ministr-mcp = { path = "ministr-mcp" }
