[workspace]
# F31.4 (2026-05-27): ministr-cloud, ministr-atlas, ministr-cloud-tools
# moved out of this workspace into the private sibling repo at
# github.com/OlsonSoftware/ministr-private via `git filter-repo`. Their
# history is preserved there with original authorship + dates; this
# workspace now ships ONLY the MIT open-core crates. See STEWARDSHIP.md.
members = ["ministr-api", "ministr-core", "ministr-daemon", "ministr-mcp", "ministr-cli", "ministr-app/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/OlsonSoftware/ministr"
homepage = "https://ministr.ai"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
toml = "0.8"
# Format-preserving TOML edits (keeps user comments in .ministr.toml).
toml_edit = "0.22"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"

# Postgres client + pool — cloud-tier OAuth/job-queue/tenant storage.
# tokio-postgres is the lighter, faster path vs. sqlx (no proc-macro
# query checking, matters less for our JSON-blob CRUD shape). Pooled by
# deadpool for multi-pod cloud + native rustls for Azure Postgres which
# requires TLS.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "1"

# Markdown parsing
comrak = "0.36"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
url = "2"

# F5.3-d-iii-b-dispatch — AWS S3 SDK for per-org SIEM s3_jsonl
# dispatch path. aws-sdk-s3 handles SigV4 signing + the PUT API
# surface; aws-credential-types provides Credentials::new for the
# parsed-from-token static credentials path (no env / file
# discovery — per-org token IS the credential source).
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-credential-types = "1"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest"] }

# HTML parsing
scraper = "0.26"

# PDF text extraction
pdf-extract = "0.10"

# Token counting
tiktoken-rs = "0.6"

# Embeddings
fastembed = "5"
# Must match fastembed's pinned ort version for CoreML support.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["coreml"] }

# Candle — native Rust ML framework with Metal GPU acceleration
candle-core = { version = "0.10", features = ["metal", "accelerate"] }
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.22"

# Vector index
hnsw_rs = "0.3"

# XML parsing
quick-xml = "0.37"

# Hashing
sha2 = "0.10"
# HMAC for GitHub webhook signature verification (admin module).
hmac = "0.12"
# Constant-time byte comparison — `subtle::ConstantTimeEq` makes HMAC
# verification immune to timing-channel attacks.
subtle = "2"
# Used for content-change-detection hashes on the indexer hot path.
# ~3× faster than SHA-256 per single-thread, with the same hex output
# format (32-byte digest → 64 hex chars). Identity-style hashes
# (corpus root ID, git repo cache key, bundle path) deliberately stay
# on SHA-256 because their values are persisted across upgrades.
blake3 = "1.5"

# File watching
notify = "7"

# Glob pattern matching
glob = "0.3"

# File walking with .gitignore support
ignore = "0.4"

# Efficient sync primitives (no poisoning, smaller, faster)
parking_lot = "0.12"

# Data-parallel CPU thread pool. Used by ministr-core's ingestion path to
# run blocking tree-sitter parsing on a dedicated pool, off the Tokio
# runtime, so async IO workers aren't tied up during the CPU-heavy parse
# phase of indexing.
rayon = "1"

# Logos — fast tokenizer used for languages without a tree-sitter
# grammar (HLSL/GLSL shaders today; planned C++ fallback when
# tree-sitter times out). Keep on workspace so each crate can opt in.
logos = "0.15"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
# Drop-in replacement for tree-sitter-cpp: a strict superset that
# additionally recognizes Unreal Engine reflection macros (UCLASS,
# UFUNCTION, GENERATED_BODY, etc.) as first-class syntax nodes.
# Vanilla C++ parses identically. Vendored in-tree (upstream isn't on
# crates.io and its git history is pathologically large to clone) —
# copied verbatim at upstream rev 92eee7d, MIT-licensed. See
# third_party/tree-sitter-unreal-cpp/ (LICENSE + VENDOR.md).
# `version` required for the same reason as the ministr-* crates below:
# `cargo package` (run by release-plz for change detection) rejects any
# path dependency without a version requirement. Matches the vendored
# crate's own version; release-plz never bumps it (release = false in
# release-plz.toml), so it stays pinned here.
tree-sitter-unreal-cpp = { path = "third_party/tree-sitter-unreal-cpp", version = "0.23.4" }
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
# Coverage expansion — already-routed languages that previously fell back
# to text-only chunking. All compile against tree-sitter 0.26 via the
# tree-sitter-language 0.1 ABI shim. Versions are resolver-validated;
# pin a git rev (unreal-cpp pattern) for any grammar that lags crates.io.
tree-sitter-bash = "0.25"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-lua = "0.4"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-dart = "0.0"
tree-sitter-r = "1"
tree-sitter-hcl = "1"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-sequel = "0.3"
tree-sitter-zig = "1"
tree-sitter-proto = "0.4"
# Composite / single-file-component grammars (host grammar parses the
# multi-language SFC structure; embedded JS/CSS is a follow-up via
# injection). `-ng` = modern tree-sitter-language bindings.
tree-sitter-svelte-ng = "1"
# Maximal coverage expansion — markup, config, JVM-adjacent, functional,
# and niche stacks. All resolver-validated against tree-sitter 0.26 via
# the tree-sitter-language 0.1 ABI shim; any crate that fails to link
# (legacy `links = "tree-sitter"` against an old core) gets dropped to
# the documented text fallback below rather than pinned, to keep the
# build green on a single `cargo build --workspace`.
tree-sitter-css = "0.25"
tree-sitter-graphql = "0.1"
tree-sitter-groovy = "0.1"
tree-sitter-nix = "0.3"
tree-sitter-erlang = "0.17"
tree-sitter-powershell = "0.26"
tree-sitter-solidity = "1"
tree-sitter-objc = "3"
tree-sitter-julia = "0.23"
tree-sitter-cmake = "0.7"
tree-sitter-make = "1"
# (tree-sitter-vue 0.0.3 and tree-sitter-astro have no ABI-current
#  release — vue pins legacy tree-sitter 0.20, astro is unpublished.
#  .vue/.astro keep the text fallback. Svelte uses the modern `-ng`
#  bindings, like tree-sitter-kotlin-ng.)
# Dockerfile: NO ABI-current grammar exists. Both crates.io 0.2.0 and
# the upstream main branch declare `links = "tree-sitter"` against
# tree-sitter ^0.24, which hard-conflicts with our 0.26 (`links`
# allows only one copy). Dockerfiles keep routing to the text
# fallback (no regression). Revisit when an upstream rev adopts the
# tree-sitter-language 0.1 ABI shim.
# Markdown/HTML: deliberately NOT added as code grammars. ministr
# routes .md/.html to dedicated prose/markup parsers (ParserKind::
# Markdown / ::Html) which outperform a code AST for those formats.
# Clojure: same situation as Dockerfile. tree-sitter-clojure 0.1.0
# (latest on crates.io) depends on `tree-sitter ^0.25.6` as a *normal*
# dep with `links = "tree-sitter"`, conflicting with our 0.26. The 13
# other coverage grammars use `tree-sitter-language ^0.1` (tree-sitter
# only as a dev-dep), so they link cleanly. .clj/.cljs/.cljc/.edn keep
# the text fallback. Revisit when crates.io clojure adopts the shim.

# Archive / compression
tar = "0.4"
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Cross-shell PATH management for `ministr setup` and the Tauri first-run flow
onpath = "0.2"

# MCP
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server", "elicitation", "schemars"] }
axum = "0.8"

# Testing
tempfile = "3"

# ministr workspace crates.
#
# `version` is REQUIRED here, not optional: `cargo package` / `cargo
# publish` hard-reject any path dependency without a version requirement
# ("all dependencies must have a version requirement specified when
# packaging"), so the workspace would fail packaging checks without it.
# The value tracks the current workspace version (the last released
# tag). The git-cliff release automation
# (`.github/workflows/release-automation.yml`) computes the next version
# from Conventional Commits and rewrites both the crate `version` and
# these requirements in lockstep on every bump, so this never needs to
# be hand-edited.
ministr-api = { path = "ministr-api", version = "0.7.0" }
ministr-core = { path = "ministr-core", version = "0.7.0" }
ministr-daemon = { path = "ministr-daemon", version = "0.7.0" }
ministr-mcp = { path = "ministr-mcp", version = "0.7.0" }
# F31.2b-ii-B — `ministr-cloud-tools serve` (which lives in the
# private sibling repo post-F31.4) depends on ministr-cli's lib
# target to share `cmd_serve_http` + `resolve_config`. MIT crate;
# proprietary consumers reach it from the sibling workspace.
ministr-cli = { path = "ministr-cli", version = "0.7.0" }
# F31.4 (2026-05-27): ministr-cloud, ministr-atlas, and
# ministr-cloud-tools workspace.dependencies entries were removed
# along with the crates themselves; their full history (123 commits)
# was moved to github.com/OlsonSoftware/ministr-private via
# `git filter-repo`. The MIT seams those crates plugged into
# (CloudRouterMounter trait + adapter sinks in ministr-api) remain
# here.
