[package]
name = "iris-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared API types for the iris daemon, MCP proxy, and CLI."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
