[package]
name = "iris-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A context cache controller for LLM agents — MCP server for intelligent document retrieval"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "llm", "context", "embeddings", "rag"]

[[bin]]
name = "iris"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
iris-api.workspace = true
iris-core = { workspace = true, features = ["candle"] }
iris-mcp.workspace = true
clap.workspace = true
rmcp.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
notify.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
