[package]
name = "iris-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain logic for iris — a context cache controller for LLM agents"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs = "6"
reqwest.workspace = true
url.workspace = true
comrak.workspace = true
scraper.workspace = true
pdf-extract.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
tiktoken-rs.workspace = true
sha2.workspace = true
quick-xml.workspace = true
fastembed.workspace = true
hnsw_rs.workspace = true
notify.workspace = true
glob.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "embedding"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "prefetch"
harness = false
