[package]
name = "iris-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "iris daemon — HTTP API over Unix domain socket for corpus management and querying."

[lints]
workspace = true

[dependencies]
# iris crates
iris-core = { workspace = true }
iris-api = { workspace = true }

# HTTP daemon on UDS
axum = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Hashing
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
