[package]
name = "iris-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server adapter for iris"

[lints]
workspace = true

[dependencies]
iris-core.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio-util = "0.7"
tempfile.workspace = true
