[package]
name = "iris-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server adapter for iris — a context cache for LLM agents"
readme = "../README.md"
categories = ["development-tools", "web-programming"]
keywords = ["mcp", "llm", "context", "server"]

[lints]
workspace = true

[dependencies]
iris-api.workspace = true
iris-core.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
schemars.workspace = true
axum.workspace = true
tempfile.workspace = true
tokio-util = "0.7"

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
