[package]
name = "ministr-api"
version = "0.5.0"
# Proprietary engine crate — never publishable to crates.io.
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared API types for the ministr daemon, MCP proxy, and CLI."
readme = "../README.md"
homepage.workspace = true
keywords = ["mcp", "ministr", "api", "types"]
categories = ["development-tools", "api-bindings"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
