[package]
name = "ministr-api"
version = "0.7.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared API types for the ministr daemon, MCP proxy, and CLI."
readme = "README.md"
homepage.workspace = true
keywords = ["mcp", "ministr", "api", "types"]
categories = ["development-tools", "api-bindings"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
# F2.1 — InstallationTokenMinter trait error type. Tiny derive crate;
# matches the workspace error convention (`thiserror` for library
# crates, `miette` for application crates).
thiserror = { workspace = true }
# F31.2b — CloudRouterMounter trait passes an axum::Router across the
# MIT seam so the cloud crate can compose its routes onto the locally-
# built base router. Same axum version as ministr-mcp / ministr-daemon
# to keep one Tower middleware tree per binary.
axum = { workspace = true }
