[package]
name = "ministr-cli"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code intelligence MCP server for AI coding agents — semantic code search, symbol navigation, and cross-language bridge detection"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "code-intelligence", "embeddings", "llm", "rag"]

[[bin]]
name = "ministr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ministr-api.workspace = true
# Non-macOS: fastembed/ONNX path only. candle-core pulls in the Apple-only
# `metal` crate stack (objc2), which refuses to compile on Linux/Windows.
ministr-mcp.workspace = true
# Headless daemon host: the `ministr __daemon` subcommand runs the same
# daemon ministr-app does, so the CLI can self-spawn it (no GUI needed).
ministr-daemon.workspace = true
# Cloud-side closed code (LicenseRef-Proprietary). The CLI source
# stays MIT; the link-time inclusion of ministr-cloud is the natural
# seam where open-core CLI orchestration meets the cloud's tenancy +
# billing + IdP impls. F1.4 sub-bullet 2 uses it for PostgresUsageSink.
ministr-cloud.workspace = true
# F2.6 — Atlas curated network. Link-time inclusion makes the CLI
# carry proprietary terms; same rationale as ministr-cloud above.
ministr-atlas.workspace = true
clap.workspace = true
rmcp.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
notify.workspace = true
toml.workspace = true
dialoguer.workspace = true
onpath.workspace = true

[features]
# Opt-in DirectML GPU acceleration for Windows (no-op elsewhere).
# Forwarded to ministr-core, which in turn enables fastembed/directml.
directml = ["ministr-core/directml"]

# macOS: enable the candle Metal backend on top of the default fastembed path.
[target.'cfg(target_os = "macos")'.dependencies]
ministr-core = { workspace = true, features = ["candle"] }

# Non-macOS: fastembed path only (candle-metal unavailable off Apple).
[target.'cfg(not(target_os = "macos"))'.dependencies]
ministr-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
