[package]
name = "ministr-cli"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code intelligence MCP server for AI coding agents — semantic code search, symbol navigation, and cross-language bridge detection"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "code-intelligence", "embeddings", "llm", "rag"]

[[bin]]
name = "ministr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ministr-api.workspace = true
# Non-macOS: fastembed/ONNX path only. candle-core pulls in the Apple-only
# `metal` crate stack (objc2), which refuses to compile on Linux/Windows.
ministr-mcp.workspace = true
# Headless daemon host: the `ministr __daemon` subcommand runs the same
# daemon ministr-app does, so the CLI can self-spawn it (no GUI needed).
ministr-daemon.workspace = true
# Cloud-side closed code (LicenseRef-Proprietary). The CLI source
# stays MIT; the link-time inclusion of ministr-cloud is the natural
# seam where open-core CLI orchestration meets the cloud's tenancy +
# billing + IdP impls. F1.4 sub-bullet 2 uses it for PostgresUsageSink.
ministr-cloud.workspace = true
# F2.6 — Atlas curated network. Link-time inclusion makes the CLI
# carry proprietary terms; same rationale as ministr-cloud above.
ministr-atlas.workspace = true
# Direct rustls dep — used by main() to install the process-wide
# CryptoProvider exactly once at startup. Both `ring` and
# `aws-lc-rs` are pulled in transitively (via reqwest +
# rustls-platform-verifier + tokio-postgres-rustls), so rustls 0.23+
# refuses to auto-pick. Without `install_default` every TLS path
# (Postgres pool, reqwest, Azure SDK) panics on first use.
rustls.workspace = true
# F2.6+ — `ministr cloud demo` builds the PKCE verifier from the OS
# CSPRNG (RFC 7636 §4.1) and serialises a few small response
# envelopes off the wire.
serde = { workspace = true }
getrandom = "0.3"
clap.workspace = true
rmcp.workspace = true
axum.workspace = true
tokio.workspace = true
# PHASE6 chunk 2 — the WorkerLoop in src/worker.rs uses
# `tokio_util::sync::CancellationToken` for cooperative shutdown and
# `futures::Future` for the boxed-future return shape of the JobRunner
# trait. Same versions ministr-core already pins.
tokio-util = "0.7"
futures = "0.3"
# F3.6-b-ii-a — opt-in CORS for the cloud HTTP server. Default-off:
# when `MINISTR_CORS_ALLOWED_ORIGINS` is unset, no CORS layer is
# mounted and self-hosted serve stays exactly as before. When set
# (cloud deploys + dev workflows that browse a daemon from
# `ministr.ai/demo/bridge`-style pages), the listed origins receive
# the `Access-Control-Allow-*` headers.
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
notify.workspace = true
toml.workspace = true
dialoguer.workspace = true
onpath.workspace = true
# F5.4-b harness helper — `cmd_cloud_mint_test_license` generates a
# fresh RSA-2048 keypair + signs a license JWT for the e2e harness
# to feed into the test-serve via env vars. Direct dep on
# `openssl` + `jsonwebtoken` keeps the dependency contract visible
# (both are already in tree transitively via ministr-cloud / Atlas).
openssl = "0.10.80"
jsonwebtoken = "9"

[features]
# Opt-in DirectML GPU acceleration for Windows (no-op elsewhere).
# Forwarded to ministr-core, which in turn enables fastembed/directml.
directml = ["ministr-core/directml"]

# macOS: enable the candle Metal backend on top of the default fastembed path.
[target.'cfg(target_os = "macos")'.dependencies]
ministr-core = { workspace = true, features = ["candle"] }

# Non-macOS: fastembed path only (candle-metal unavailable off Apple).
[target.'cfg(not(target_os = "macos"))'.dependencies]
ministr-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
